[package]
name = "ltc-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Python bindings of the Liftime Clustering (LTC) algorithm."
license.workspace = true
repository.workspace = true
publish = false


[lib]
name = "ltcpy"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.27.1", features = ["generate-import-lib"] }

ltc-rs = { path = "../ltc-rs" }
