[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ltcpy"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Balthasar Teuscher", email = "balthasar.teuscher@tum.de" },
    { name = "Johann Maximilian Zollner", email = "maximilian.zollner@tum.de" },
]
description = "Efficient and robust topology-based clustering."
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["cluster", "clustering", "ltc"]

classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/tum-bgd/ltc"

[tool.maturin]
features = ["pyo3/extension-module"]
